--- a/DetallesPersona/App.config
+++ b/DetallesPersona/App.config
@@ -8,7 +8,7 @@
     <add name="ConStr"
     connectionString="Data Source=.\SqlExpress;
     Initial Catalog=PersonasDb;Integrated Security=true"
-    providerName="System.Data.DqlClient"/>
+    providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
   <startup>
